--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "nodemon backend/index.js",
     "start": "node backend/index.js"
-
   },
   "keywords": [],
   "author": "",
@@ -13,7 +12,9 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.6.2",
     "nodemon": "^3.1.4"
   }
 }
