--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.13.2",
-    "flowbite-react": "^0.10.1",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.12.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -20,7 +22,7 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.28.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
