--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.12.0",
+    "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
