--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
