--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
@@ -23,6 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "recaptcha-v3": "^1.11.3",
+    "zxcvbn": "^4.4.2"
   }
 }
