--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.11.0",
     "firebase": "^10.13.2",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
