Refactor Footer and Header components; remove unused imports and optimize key props
- Updated Footer.jsx to remove unused Button import and optimize key prop in legal links mapping.
- Updated Header.jsx to remove unused imports and streamline component structure.
- Cleaned up PostsPage.jsx by removing unnecessary state and optimizing JSX for better readability.
- Updated package-lock.json to reflect dependency updates and version changes for various packages.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,4 +8,4 @@ VITE_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
 VITE_NODE_ENV=development
 
 # Backend API URL
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://localhost:8000/api
