--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install --include=dev && npm install --prefix frontend --include=dev && npm run build --prefix frontend",
     "lint": "eslint .",
     "preview": "vite preview"
   },
